# MIND_Multistage_and_Distill_DLRM_Student

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mind_small.yaml
docs/: metrics.md
runs/mind_small_demo/eval/: pareto_frontier.md  ranker_eval.json  rerank_eval.json  rerank_search.json
runs/mind_small_demo/ranker/: calibration.json  calibration_stats.json  epoch_1.json  epoch_2.json  epochs.json  train_summary.json
runs/mind_small_demo/retrieval/: eval.json  meta.json
runs/mind_small_demo/teacher/: meta.json
scripts/: run_all.ps1
src/mindrec/: cli.py  config.py  utils.py
src/mindrec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mindrec/data/: datasets.py  featurize.py  mind_io.py
src/mindrec/metrics/: calibration.py  diversity.py  fairness.py  ranking.py
src/mindrec/models/: calibration.py  distill.py  dlrm.py  teacher.py
src/mindrec/pipeline/: evaluate.py  preprocess.py  ranker_train.py  rerank_eval.py  rerank_search.py  retrieval.py  teacher_train.py
src/mindrec/rerank/: greedy.py
