[build-system]
requires=["setuptools>=68", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="mindrec"
version="0.1.0"
description="MIND multi-stage recommender: retrieval + DLRM ranker + reranking with distillation, diversity, fairness"
requires-python=">=3.10"
dependencies=[]

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
where=["src"]
